# ArcRasterRescue

./: CITATION.cff  CMakeLists.txt  LICENSE  NEWS  NOTES  README.md  arr.cpp  arr.hpp  main.cpp  makefile
docker/: Dockerfile  README.md  docker-compose.yaml
evaluation/: main.cpp
include/arc_raster_rescue/: arc_raster_rescue.hpp
src/: arr.cpp  arr.hpp  main.cpp  makefile
